--- a/pollingo/src/scss/5-modules/_PollBox.scss
+++ b/pollingo/src/scss/5-modules/_PollBox.scss
@@ -87,7 +87,8 @@
   footer {
     grid-area: footer;
     border: getSize(pb-border-1);
-    overflow: initial;
+    overflow: hidden;
+    height: fit-content;
 
     .tabPanel,
     .tabPanel > ol {
