--- a/pollingo/src/scss/4-layout/_siteHeader.scss
+++ b/pollingo/src/scss/4-layout/_siteHeader.scss
@@ -13,6 +13,8 @@
   }
 
   @include screenSizeBp(min-small) {
+    // ----- small plus --------------------
+
     h5 {
       display: initial;
     }
@@ -21,19 +23,22 @@
   @include screenSizeBp(min-medium) {
   }
 
+  // ----- xsmall plus --------------------
+
   background-color: getColor(header-bg-1);
   color: getColor(header-text-1);
-
-  li {
-    color: #47002a;
-  }
-
   padding: 5px;
   display: grid;
   grid-gap: 0.2em;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 0fr 2fr;
   grid-template-areas: "header main aside";
+
+  li {
+    color: #47002a;
+  }
+
+  // ----- GRID AREAS -------------------------
 
   header {
     grid-area: header;
@@ -53,6 +58,11 @@
     background-color: getColor(pb-header-bg-1);
     border: getSize(pb-border-1);
     margin: 0px 0px 0px 0px;
+
+    ul {
+      margin: 0px;
+      padding: 0px;
+    }
 
     ul li {
       margin: 3px;
