--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -25,10 +25,11 @@ body {
 }
 
 .header-container {
-  background-color: #ff94d3;
+  background-color: #ffe7f5;
   color: #47002a;
   padding: 5px;
-  display: grid;
+  display: flex;
+  flex-direction: row;
   grid-gap: 0.2em;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 0fr 2fr;
