--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -29,11 +29,9 @@ body {
   color: #47002a;
   padding: 5px;
   display: flex;
-  flex-direction: row;
-  grid-gap: 0.2em;
-  grid-template-rows: 1fr;
-  grid-template-columns: 1fr 0fr 2fr;
-  grid-template-areas: "header main aside";
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .header-container h2,
