--- a/pollingo/src/scss/4-layout/_siteHeader.scss
+++ b/pollingo/src/scss/4-layout/_siteHeader.scss
@@ -3,7 +3,7 @@
 @import "../1-helpers/_util_mixins";
 
 .header-container {
-  h2,
+  h3,
   h5 {
     margin: 0px 0px 0px 0px;
   }
@@ -32,6 +32,7 @@
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
+  align-content: center;
 
   li {
     color: #47002a;
