adding a lower header, will use it probably for... categories. similar to youtube

--- a/pollingo/src/scss/main.scss
+++ b/pollingo/src/scss/main.scss
@@ -20,6 +20,7 @@
 @import "4-layout/_navigation.scss";
 @import "4-layout/_layoutOne.scss";
 @import "4-layout/_siteHeader.scss";
+@import "4-layout/_siteHeaderLower.scss";
 @import "4-layout/_siteMainContent.scss";
 
 // 5-MODULES
