--- a/pollingo/src/scss/main.scss
+++ b/pollingo/src/scss/main.scss
@@ -19,8 +19,8 @@
 @import "4-layout/_footer.scss";
 @import "4-layout/_navigation.scss";
 @import "4-layout/_layoutOne.scss";
-@import "4-layout/_siteHeader.scss";
-@import "4-layout/_siteHeaderLower.scss";
+@import "4-layout/_header.scss";
+@import "4-layout/_headerLower.scss";
 @import "4-layout/_siteMainContent.scss";
 
 // 5-MODULES
