fixing header to top

--- a/pollingo/src/scss/4-layout/_header.scss
+++ b/pollingo/src/scss/4-layout/_header.scss
@@ -4,7 +4,7 @@
 
 .header-container {
   position: fixed;
-
+  top: 0;
   // ----- xsmall plus --------------------
   width: 100%;
   background-color: getColor(header-bg-1);
