--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -31,6 +31,7 @@ body {
 
 .header-container {
   position: fixed;
+  top: 0;
   width: 100%;
   background-color: #ffe7f5;
   color: #47002a;
@@ -95,7 +96,7 @@ body {
   padding: 5px;
   position: fixed;
   width: 100%;
-  margin-top: 35px;
+  margin-top: 30px;
 }
 
 .header-lower-container .header-flex-item {
