--- a/pollingo/src/scss/4-layout/_header.scss
+++ b/pollingo/src/scss/4-layout/_header.scss
@@ -4,6 +4,8 @@
 
 .header-container {
   position: fixed;
+  //  overflow: hidden;
+
   top: 0;
   // ----- xsmall plus --------------------
   width: 100%;
