--- a/pollingo/src/scss/4-layout/_headerLower.scss
+++ b/pollingo/src/scss/4-layout/_headerLower.scss
@@ -4,7 +4,9 @@
   padding: 5px;
   position: fixed;
   width: 100%;
-  margin-top: 30px;
+  top: 30px;
+  //  margin-top: 20px;
+  //  overflow: hidden;
 
   .header-flex-item {
     color: red;
