--- a/pollingo/src/scss/4-layout/_layoutOne.scss
+++ b/pollingo/src/scss/4-layout/_layoutOne.scss
@@ -18,8 +18,8 @@
 
   .grid-main-item-main {
     background-color: rgb(238, 251, 255);
-    //    grid-area: main;
-    margin-top: 0px;
+    padding-top: 30px;
+    margin-top: 60px;
   }
 
   //   @include screenSizeBp(min-small) {
