--- a/pollingo/src/scss/4-layout/_headerLower.scss
+++ b/pollingo/src/scss/4-layout/_headerLower.scss
@@ -4,7 +4,9 @@
   padding: 5px;
   position: fixed;
   width: 100%;
-  top: 30px;
+  top: 50px;
+
+  //  overflow: hidden;
 
   .header-flex-item {
     color: red;
@@ -12,17 +14,29 @@
     margin: 0px 5px;
   }
 
-  .button-unselected {
+  .button {
     border-radius: 15px;
+    margin: 3px;
+    padding: 7px;
+  }
+
+  .button-unselected {
     background-color: rgb(255, 255, 255);
     color: black;
     border: 1px solid #8d8d8d;
   }
 
+  .button-unselected:hover {
+    background-color: rgb(236, 236, 236);
+  }
+
   .button-selected {
-    border-radius: 15px;
     background-color: rgb(71, 71, 71);
     color: white;
     border: 1px solid #000000;
+  }
+
+  .button-selected:hover {
+    background-color: rgb(114, 114, 114);
   }
 }
