--- a/pollingo/src/scss/4-layout/_layoutOne.scss
+++ b/pollingo/src/scss/4-layout/_layoutOne.scss
@@ -19,6 +19,7 @@
   .grid-main-item-main {
     background-color: rgb(238, 251, 255);
     padding-top: 30px;
+    padding-bottom: 30px;
     margin-top: 90px;
   }
 
