--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -237,19 +237,18 @@ body {
   border: 1px solid #473333;
   overflow: hidden;
   height: auto;
-  background-color: #a1a1ff;
+  background-color: #ccccfc;
   box-sizing: border-box;
 }
 
 .pollbox-1 footer .tabPanel,
 .pollbox-1 footer .tabPanel > ol {
   height: 100%;
-  padding-top: 5px;
+  padding-top: 0px;
   box-sizing: border-box;
   font-family: sans-serif;
-  font-size: 22px;
+  font-size: 20px;
   font-family: sans-serif;
-  font-size: 10px;
 }
 
 .pollbox-1 .tabContainer .buttonContainer {
