working on pollbox more. need to get tab/switching working. then going to get pollbox components auto generated somehow.

--- a/pollingo/src/scss/5-modules/_PollBox.scss
+++ b/pollingo/src/scss/5-modules/_PollBox.scss
@@ -99,6 +99,14 @@
 
     .tabPanel,
     .tabPanel > ol {
+      // .pollTypeIRV {
+      //   color: red;
+      // }
+
+      // .pollTypeApproval {
+      //   color: blue;
+      // }
+
       height: 100%;
       padding-top: 0px;
       box-sizing: border-box;
@@ -133,3 +141,5 @@
     }
   }
 }
+
+// .pollTypeIRV
