--- a/pollingo/src/scss/5-modules/_PollBox.scss
+++ b/pollingo/src/scss/5-modules/_PollBox.scss
@@ -97,16 +97,24 @@
       //      display: inline-block;
     }
 
+    .pollTypeIRV {
+      color: red;
+    }
+
+    .pollTypeApproval {
+      color: blue;
+    }
+
+    .pollTypeRC {
+      color: rgb(2, 255, 15);
+    }
+
+    .pollTypeSTAR {
+      color: rgb(255, 217, 0);
+    }
+
     .tabPanel,
     .tabPanel > ol {
-      // .pollTypeIRV {
-      //   color: red;
-      // }
-
-      // .pollTypeApproval {
-      //   color: blue;
-      // }
-
       height: 100%;
       padding-top: 0px;
       box-sizing: border-box;
