--- a/pollingo/src/scss/5-modules/_PollBox.scss
+++ b/pollingo/src/scss/5-modules/_PollBox.scss
@@ -99,14 +99,17 @@
 
     .pollTypeIRV {
       color: rgb(112, 0, 0);
+      list-style-type: georgian;
     }
 
     .pollTypeApproval {
       color: rgb(0, 0, 114);
+      list-style-type: katakana-iroha;
     }
 
     .pollTypeRC {
       color: rgb(2, 104, 7);
+      list-style-type: hiragana;
     }
 
     .pollTypeSTAR {
