--- a/pollingo/src/scss/5-modules/_PollBox.scss
+++ b/pollingo/src/scss/5-modules/_PollBox.scss
@@ -97,6 +97,14 @@
       //      display: inline-block;
     }
 
+    .formCheckbox {
+      background-color: red;
+    }
+
+    .formRadio {
+      background-color: blue;
+    }
+
     .pollTypeIRV {
       color: rgb(112, 0, 0);
       list-style-type: georgian;
