getting a checkbox working. need to figure out how to switch between cb and radios...

--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -241,12 +241,8 @@ body {
   box-sizing: border-box;
 }
 
-.pollbox-1 footer .formCheckbox {
-  background-color: red;
-}
-
-.pollbox-1 footer .formRadio {
-  background-color: blue;
+.pollbox-1 footer .formOff {
+  display: none;
 }
 
 .pollbox-1 footer .pollTypeIRV {
