--- a/pollingo/src/scss/5-modules/_PollBox.scss
+++ b/pollingo/src/scss/5-modules/_PollBox.scss
@@ -97,12 +97,8 @@
       //      display: inline-block;
     }
 
-    .formCheckbox {
-      background-color: red;
-    }
-
-    .formRadio {
-      background-color: blue;
+    .formOff {
+      display: none;
     }
 
     .pollTypeIRV {
