looks like getting the input types to switch will need more work. should probably pull our code into more functions.

--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -178,7 +178,7 @@ body {
   grid-gap: 0.1em;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 18fr 1fr 1fr;
-  grid-template-areas: "main main main" "main main main" "footer footer footer";
+  grid-template-areas: "header header header" "main main main" "footer footer footer";
   /*  
   aside {
     grid-area: aside;
