fixed a sass problem. needed to add *{} selector to a mixin that didn't have a selector.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,5 +28,6 @@
 @import "5-modules/_PollBox.scss";
 @import "5-modules/_ToggleRankedVoting.scss";
 @import "5-modules/_separatorComponent.scss";
+@import "5-modules/_resultsComponent.scss";
 
 // 6-PAGES
