--- a/src/scss/5-modules/_PollBox.scss
+++ b/src/scss/5-modules/_PollBox.scss
@@ -92,6 +92,7 @@
     background-color: rgb(204, 204, 252);
     box-sizing: border-box;
 
+    /*
     .tabPanel {
       //      height: 500px;
       //      display: inline-block;
@@ -100,6 +101,7 @@
     .formOff {
       //      display: none;
     }
+    */
 
     .pollTypeIRV {
       color: rgb(112, 0, 0);
