--- a/src/scss/5-modules/_Console.scss
+++ b/src/scss/5-modules/_Console.scss
@@ -22,7 +22,7 @@
   // VIEW SIZE [xl, 5/6]
   @include screenSizeBp(min-extralarge) {
     //    background-color: getColor(pb-main-bg-1);
-    width: 500px;
+    width: 100%;
   }
 
   // VIEW SIZE [xxl, 6/6]
