--- a/src/scss/5-modules/_Console.scss
+++ b/src/scss/5-modules/_Console.scss
@@ -3,49 +3,27 @@
 @import "../1-helpers/_util_mixins";
 
 .console {
-  // VIEW SIZE [sm, 2/6]
+  /***** VIEW SIZE [sm, 2/6] *****/
   @include screenSizeBp(min-small) {
     //        background-color: getColor(pb-header-bg-1);
-    width: 50%;
-  }
-
-  // VIEW SIZE [md, 3/6]
-  @include screenSizeBp(min-medium) {
-    // not needed
-  }
-
-  // VIEW SIZE [lg, 4/6]
-  @include screenSizeBp(min-large) {
-    // not needed
-  }
-
-  // VIEW SIZE [xl, 5/6]
-  @include screenSizeBp(min-extralarge) {
-    //    background-color: getColor(pb-main-bg-1);
     width: 100%;
   }
 
-  // VIEW SIZE [xxl, 6/6]
-  @include screenSizeBp(min-extraextralarge) {
-    // not needed
-  }
-
-  // VIEW SIZE [xs, 1/6]
+  /***** VIEW SIZE [xs, 1/6] *****/
 
   h2,
   p {
-    margin: 0px;
+    border: 1px solid;
+    margin: 7px;
+    padding: 3px;
   }
 
   background-color: getColor(con-bg-1);
-  margin: 0px 0px 0px 0px;
+  margin: 10px;
   padding: 5px;
+  border: 1px solid;
 
   .console-name {
     color: getColor(con-name-1);
-  }
-
-  .console-desc {
-    color: getColor(con-desc-1);
   }
 }
