simplifying the CSS until I get more functionality. too many CSS rules causing problems at larger screens.

--- a/src/scss/1-helpers/_util_variables.scss
+++ b/src/scss/1-helpers/_util_variables.scss
@@ -22,6 +22,7 @@ $colors: (
   pb-main-tab-bg-2: rgb(92, 2, 54),
   pb-main-tab-text-1: rgb(255, 228, 244),
   pb-main-tab-text-2: rgb(255, 255, 255),
+  res-box-text-1: rgb(52, 24, 155),
 );
 
 $sizes: (
