--- a/src/css/main.css
+++ b/src/css/main.css
@@ -292,11 +292,7 @@ body {
   color: #6b2a2a;
 }
 
-* {
-  color: blue;
-}
-
-p {
-  color: red;
+.resultbox-graph p {
+  color: #34189b;
 }
 /*# sourceMappingURL=main.css.map */
