--- a/src/scss/1-helpers/_util_variables.scss
+++ b/src/scss/1-helpers/_util_variables.scss
@@ -23,9 +23,11 @@ $colors: (
   pb-main-tab-text-1: rgb(255, 228, 244),
   pb-main-tab-text-2: rgb(255, 255, 255),
   res-box-text-1: rgb(52, 24, 155),
+  layout-one-bg-1: rgb(181, 170, 223),
 );
 
 $sizes: (
+  padding-5: 5px,
   pb-border-1: 1px solid rgb(71, 51, 51),
   pb-border-2: 2px dashed rgb(255, 255, 255),
   pb-border-3: 3px solid rgb(255, 255, 255),
@@ -33,4 +35,8 @@ $sizes: (
 
 @function getColor($color-name) {
   @return map-get($colors, $color-name);
+}
+
+@function getSize($size-name) {
+  @return map-get($sizes, $size-name);
 }
