--- a/src/scss/4-layout/_header.scss
+++ b/src/scss/4-layout/_header.scss
@@ -11,14 +11,14 @@
   width: 100%;
   background-color: getColor(header-bg-1);
   color: getColor(header-text-1);
-  padding: 0px 0px;
+  padding: getSize(padding-5);
   display: flex;
   flex-flow: row nowrap;
   //  justify-content: center;
   align-items: center;
   //  align-content: center;
   border: li {
-    color: #47002a;
+    color: getColor(header-text-1);
   }
 
   h3 {
