--- a/src/css/main.css
+++ b/src/css/main.css
@@ -27,25 +27,21 @@ body {
 
 .header-container {
   position: fixed;
-  top: 0;
   width: 100%;
   background-color: #ffe7f5;
   color: #47002a;
   padding: 5px;
   display: flex;
   flex-flow: row nowrap;
-  align-items: center;
-  border: li;
-  border-color: #47002a;
 }
 
 .header-container h3 {
-  font-size: 40px;
+  font-size: 20px;
 }
 
 .header-container h3,
 .header-container h5 {
-  margin: 0px 0px 0px 0px;
+  margin: 0px;
 }
 
 .header-container .pollingoLogoMed {
@@ -62,33 +58,10 @@ body {
 }
 
 .header-container header {
-  grid-area: header;
   background-color: #f3bdff;
   border: 1px solid #473333;
-  margin: 0px 0px 0px 0px;
-}
-
-.header-container main {
-  grid-area: main;
-  background-color: #f3bdff;
-  margin: auto auto auto 0px;
-}
-
-.header-container aside {
-  grid-area: aside;
-  background-color: #f3bdff;
-  border: 1px solid #473333;
-  margin: 0px 0px 0px 0px;
-}
-
-.header-container aside ul {
-  margin: 0px;
-  padding: 0px;
-}
-
-.header-container aside ul li {
-  margin: 3px;
-  display: inline;
+  padding: 5px;
+  width: auto;
 }
 
 .header-lower-container {
