--- a/src/scss/1-helpers/_util_variables.scss
+++ b/src/scss/1-helpers/_util_variables.scss
@@ -27,7 +27,7 @@ $colors: (
 );
 
 $sizes: (
-  padding-5: 5px,
+  padding-5px: 5px,
   pb-border-1: 1px solid rgb(71, 51, 51),
   pb-border-2: 2px dashed rgb(255, 255, 255),
   pb-border-3: 3px solid rgb(255, 255, 255),
