--- a/src/css/main.css
+++ b/src/css/main.css
@@ -122,9 +122,7 @@ body {
 }
 
 .pollbox-1 {
-  margin: 5px 5px 5px 5px;
   padding: 5px;
-  width: 95%;
   display: grid;
   grid-gap: 0.1em;
   grid-template-rows: 1fr 1fr;
@@ -140,37 +138,15 @@ body {
 */
 }
 
-@media screen and (min-width: 39.9375em) {
-  .pollbox-1 * {
-    background-color: #f3bdff;
-    width: 600px;
-  }
-}
-
-@media screen and (min-width: 90.1875em) {
-  .pollbox-1 * {
-    background-color: #ffc6c6;
-    width: 600px;
-  }
-}
-
 .pollbox-1 .span-pollbox-question {
-  color: white;
-  font-family: "Cursive";
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.pollbox-1 .span-pollbox-answer {
-  color: black;
-  font-family: "Monospace";
+  color: #ffebf1;
+  font: italic bold 20px Georgia;
 }
 
 .pollbox-1 header {
   grid-area: header;
   background-color: #f3bdff;
   border: 1px solid #473333;
-  margin: auto;
 }
 
 .pollbox-1 nav {
@@ -255,6 +231,20 @@ body {
 .pollbox-1 .tabContainer .buttonContainer button:hover {
   background-color: #5c0236;
   color: white;
+}
+
+@media screen and (min-width: 39.9375em) {
+  .pollbox-1 * {
+    background-color: #f3bdff;
+    width: 600px;
+  }
+}
+
+@media screen and (min-width: 90.1875em) {
+  .pollbox-1 * {
+    background-color: #ffc6c6;
+    width: 600px;
+  }
 }
 
 .separator-1-div {
