--- a/src/scss/5-modules/_PollBox.scss
+++ b/src/scss/5-modules/_PollBox.scss
@@ -3,37 +3,9 @@
 @import "../1-helpers/_util_mixins";
 
 .pollbox-1 {
-  // view size small 2/6
-  @include screenSizeBp(min-small) {
-    background-color: getColor(pb-header-bg-1);
-    width: 600px;
-  }
+  // VIEW xs 1/6
+  padding: getSize(padding-5px);
 
-  // view size med 3/6
-  @include screenSizeBp(min-medium) {
-    // not needed
-  }
-
-  // view size large 4/6
-  @include screenSizeBp(min-large) {
-    // not needed
-  }
-
-  // view size xl 5/6
-  @include screenSizeBp(min-extralarge) {
-    background-color: getColor(pb-main-bg-xl-1);
-    width: 600px;
-  }
-
-  // view size xxl 6/6
-  @include screenSizeBp(min-extraextralarge) {
-    // not needed
-  }
-
-  // VIEW small 1/6
-  margin: 5px 5px 5px 5px;
-  padding: 5px;
-  width: 95%;
   display: grid;
   grid-gap: 0.1em;
   grid-template-rows: 1fr 1fr;
@@ -44,22 +16,15 @@
     "footer footer footer";
 
   .span-pollbox-question {
-    color: white;
-    font-family: "Cursive";
-    font-weight: bold;
-    font-size: 20px;
-  }
-
-  .span-pollbox-answer {
-    color: black;
-    font-family: "Monospace";
+    color: getColor(pb-header-text-1);
+    font: getSize(pb-header-text-1);
   }
 
   header {
     grid-area: header;
     background-color: getColor(pb-header-bg-1);
     border: getSize(pb-border-1);
-    margin: auto;
+    //    margin: auto;
   }
 
   nav {
@@ -156,6 +121,33 @@
         color: getColor(pb-main-tab-text-2);
       }
     }
+  }
+
+  // view size small 2/6
+  @include screenSizeBp(min-small) {
+    background-color: getColor(pb-header-bg-1);
+    width: 600px;
+  }
+
+  // view size med 3/6
+  @include screenSizeBp(min-medium) {
+    // not needed
+  }
+
+  // view size large 4/6
+  @include screenSizeBp(min-large) {
+    // not needed
+  }
+
+  // view size xl 5/6
+  @include screenSizeBp(min-extralarge) {
+    background-color: getColor(pb-main-bg-xl-1);
+    width: 600px;
+  }
+
+  // view size xxl 6/6
+  @include screenSizeBp(min-extraextralarge) {
+    // not needed
   }
 }
 
