simplifying the CSS until I get more functionality. too many CSS rules causing problems at larger screens.

--- a/src/scss/5-modules/_Console.scss
+++ b/src/scss/5-modules/_Console.scss
@@ -13,6 +13,6 @@
   /***** VIEW SIZE [sm, 2/6] *****/
   @include screenSizeBp(min-small) {
     //        background-color: getColor(pb-header-bg-1);
-    width: 100%;
+    //    width: 100%;
   }
 }
