--- a/src/scss/5-modules/_PollBox.scss
+++ b/src/scss/5-modules/_PollBox.scss
@@ -89,31 +89,9 @@
     }
   }
 
-  // view size small 2/6
-  @include screenSizeBp(min-small) {
-    background-color: getColor(pb-header-bg-1);
-    width: 600px;
-  }
-
-  // view size med 3/6
-  @include screenSizeBp(min-medium) {
-    // not needed
-  }
-
-  // view size large 4/6
-  @include screenSizeBp(min-large) {
-    // not needed
-  }
-
   // view size xl 5/6
   @include screenSizeBp(min-extralarge) {
-    background-color: getColor(pb-main-bg-xl-1);
-    width: 600px;
-  }
-
-  // view size xxl 6/6
-  @include screenSizeBp(min-extraextralarge) {
-    // not needed
+    //    width: 600px;
   }
 }
 
