--- a/src/scss/3-basics/_base.scss
+++ b/src/scss/3-basics/_base.scss
@@ -1,9 +1,5 @@
 // view size xs
 body {
   margin: 0;
-}
-
-// view size small 2/6
-@include screenSizeBp(min-small) {
-  //  background-color: getColor(pb-header-bg-1);
+  background-color: getColor(body-bg-1);
 }
