--- a/src/scss/1-helpers/_util_variables.scss
+++ b/src/scss/1-helpers/_util_variables.scss
@@ -35,6 +35,7 @@ $sizes: (
   pb-border-3: 3px solid rgb(255, 255, 255),
   pb-header-text-1: italic bold 20px Georgia,
   console-border-1: 1px solid rgb(172, 44, 44),
+  resultbox-border-1: 1px solid rgb(172, 44, 44),
 );
 
 @function getColor($color-name) {
