--- a/src/scss/1-helpers/_util_variables.scss
+++ b/src/scss/1-helpers/_util_variables.scss
@@ -26,6 +26,10 @@ $colors: (
   res-box-text-1: rgb(52, 24, 155),
   layout-one-bg-1: rgb(181, 170, 223),
   body-bg-1: rgb(181, 170, 223),
+  pb-main-body-text-1: rgb(233, 49, 24),
+  pb-main-body-text-2: rgb(59, 16, 231),
+  pb-main-body-text-3: rgb(24, 121, 53),
+  pb-main-body-text-4: rgb(97, 102, 47),
 );
 
 $sizes: (
