--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: #b5aadf;
+  background-color: #ffe1e1;
 }
 
 /****************************
@@ -16,7 +16,7 @@ body {
 }
 
 .layoutOne .grid-main-item-main {
-  background-color: #b5aadf;
+  background-color: #ffe1e1;
   padding-top: 50px;
 }
 
