adding the graph containers.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,7 +16,7 @@ body {
 }
 
 .layoutOne .grid-main-item-main {
-  background-color: #ffe1e1;
+  background-color: #dda8a8;
   padding-top: 50px;
 }
 
