simplifying the CSS until I get more functionality. too many CSS rules causing problems at larger screens.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -183,6 +183,12 @@ body {
   color: white;
 }
 
+@media screen and (min-width: 39.9375em) {
+  .pollbox-1 * {
+    max-width: 630px;
+  }
+}
+
 .separator-1-div {
   margin: 15px;
   text-align: center;
